<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndividualCostActivity">

    <TextView
        android:id="@+id/individualCostInstructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/individualCostInstructionTextView_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        tools:ignore="Autofill,LabelFor"
        android:id="@+id/costEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number|numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/individualCostInstructionTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/individualCostInstructionTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/individualCostInstructionTextView2_text"
        app:layout_constraintTop_toBottomOf="@id/costEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/chooseEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/chooseEventButton_text"
        android:onClick="chooseEvent"
        app:layout_constraintTop_toBottomOf="@id/individualCostInstructionTextView2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/chosenEventTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/chosenEventTextView_text"
        app:layout_constraintStart_toEndOf="@id/chooseEventButton"
        app:layout_constraintTop_toTopOf="@id/chooseEventButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/individualCostInstructionTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/individualCostInstructionTextView3_text"
        app:layout_constraintTop_toBottomOf="@id/chooseEventButton"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        tools:ignore="Autofill,LabelFor"
        android:id="@+id/descriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/individualCostInstructionTextView3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitIndividualCostButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/enter"
        android:onClick="submitIndividualCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancelIndividualCostButton" />

    <Button
        android:id="@+id/cancelIndividualCostButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        android:onClick="cancelIndividualCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>