<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="noExcludeDescendants"
    tools:context=".MainActivity">

    <!-- import layout from processing screen -->
    <include
        android:id="@+id/processScreenLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="invisible"
        layout="@layout/activity_processing_screen" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:onClick="exitApp"
        android:text="@string/exitButton_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/exitTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/exitTextView_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exitButton" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="scanCode"
        android:text="@string/scanButton_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exitTextView" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:onClick="manualOrder"
        android:text="@string/orderButton_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scanButton" />

    <TextView
        android:id="@+id/drinkOptionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/drinkOptionsTextView_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/orderButton" />

    <Button
        android:id="@+id/sharedCostButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sharedCostButton_text"
        android:onClick="sharedCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/drinkOptionsTextView" />

    <Button
        android:id="@+id/costButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/costButton_text"
        android:onClick="individualCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sharedCostButton" />

    <TextView
        android:id="@+id/foodOptionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/foodOptionsTextView_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/costButton" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/foodOptionsTextView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcomeTextView_text" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/boundaryBottom"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible" />

    <View
        android:id="@+id/boundaryTop"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible" />

    <View
        android:id="@+id/boundaryLeft"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible" />

    <View
        android:id="@+id/boundaryRight"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>